--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/red"
     tools:context=".SplashActivity">
 
     <ImageView
         android:id="@+id/splash_img"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/ic_logo_smile"
         android:layout_centerInParent="true" />
 
@@ -18,8 +19,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         android:layout_below="@id/splash_img"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
