--- a/app/src/main/res/layout/tab1_fragment.xml
+++ b/app/src/main/res/layout/tab1_fragment.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+android:layout_width="match_parent"
+android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/groupButton"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,7 +25,7 @@
             android:id="@+id/btnCamera"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_camera"/>
+            app:srcCompat="@drawable/ic_camera"/>
 
         <Button
             android:id="@+id/btnIdentify"
