--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_change_lang"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="@string/setting"
+        android:title="@string/change_lang"
         android:visible="true"></item>
     <item
         android:id="@+id/action_help"
