--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,9 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/tb_flame">
+            android:background="@color/tb_flame"
+            app:tabIndicatorColor="@color/tb_palm_leaf"
+            app:tabIndicatorHeight="3dp">
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
