Update layout and emotion information text

--- a/app/src/main/res/layout/tab1_fragment.xml
+++ b/app/src/main/res/layout/tab1_fragment.xml
@@ -16,9 +16,9 @@ android:layout_height="match_parent">
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/btnGallery"
+            android:id="@+id/btnDetect"
             android:layout_weight="1"
-            android:text="@string/gallery"
+            android:text="@string/detect"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
