--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,24 +15,48 @@
 
         <include
             android:id="@+id/app_bar"
-            layout="@layout/app_bar"></include>
+            layout="@layout/app_bar" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/tb_flame"
-            app:tabIndicatorColor="@color/tb_palm_leaf"
-            app:tabIndicatorHeight="3dp">
-
-        </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
+    <LinearLayout
+        android:id="@+id/groupButton"
+        android:layout_alignParentBottom="true"
+        android:weightSum="2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btnDetect"
+            android:layout_weight="1"
+            android:text="@string/detect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+        <ImageButton
+            android:id="@+id/btnCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_camera"/>
+
+        <Button
+            android:id="@+id/btnIdentify"
+            android:layout_weight="1"
+            android:text="@string/identify"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_below="@id/action_bar"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_above="@id/groupButton"
+        android:layout_centerInParent="true"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:contentDescription="@string/img_desc"
+        android:padding="2dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"/>
 
 </RelativeLayout>
